--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 .page {
   display: flex;
   flex-direction: column;
@@ -33,4 +34,5 @@ header {
 
 button {
   border-radius: 5%;
+  font-size: large;
 }
